feat: 添加无权限是发通知提醒的功能

--- a/manifest.json
+++ b/manifest.json
@@ -6,10 +6,11 @@
     "default_title": "TEST"
   },
   "manifest_version": 3,
-  "version": "0.1.1",
+  "version": "0.1.2",
   "permissions": [
     "activeTab",
-    "scripting"
+    "scripting",
+    "notifications"
   ],
   "background": {
     "service_worker": "background.js"
